--- a/10-thanks.html
+++ b/10-thanks.html
@@ -14,7 +14,7 @@
 
 
       <a-image link="href: 9-referencias.html" src="#proximo" position="149.63619 4.123 -8.50316" scale="5.57013 3.46433 0.0001" geometry="height: 5; width: 6" rotation="0 -90 0" animation__scale="property: scale; to: 6.57013 3.46433 0.0001; dur: 200; startEvents: mouseenter" animation__scale_reverse="property: scale; to: 5.57013 3.46433 0.00001; dur: 200; startEvents: mouseleave" material=""></a-image>
-      <a-image link="href: 1-index.html" src="#proximo" position="137.43951 4.12267 25.595" scale="5.57013 3.46433 0.0001" geometry="height: 5; width: 6" rotation="0 90 0" animation__scale="property: scale; to: 6.57013 3.46433 0.0001; dur: 200; startEvents: mouseenter" animation__scale_reverse="property: scale; to: 5.57013 3.46433 0.00001; dur: 200; startEvents: mouseleave" material=""></a-image>
+      <a-image link="href: index.html" src="#proximo" position="137.43951 4.12267 25.595" scale="5.57013 3.46433 0.0001" geometry="height: 5; width: 6" rotation="0 90 0" animation__scale="property: scale; to: 6.57013 3.46433 0.0001; dur: 200; startEvents: mouseenter" animation__scale_reverse="property: scale; to: 5.57013 3.46433 0.00001; dur: 200; startEvents: mouseleave" material=""></a-image>
 
       <a-sky src="#entrada" rotation="0 -90 0"></a-sky>
       <a-image src="#logo" position="8.95741 3.68035 -8.50316" scale="6 2.05 1" material="" geometry="" rotation="0 -17.9 0"></a-image>
