--- a/2-bibliografia.html
+++ b/2-bibliografia.html
@@ -25,7 +25,7 @@
               rotation="0 -97.08 0"></a-text>          
       <a-image src="#dany" position="13.85257 0.93396 -14.64533" scale="2 2 1" height="8" width="6" rotation="0 -34.35 0" material="" geometry=""></a-image>          
       <a-image link="href: 2_bibliografia.html" src="#logo-tdc" position="-3.09985 1.8127 -3.27265" scale="0.22 0.24 0.0001" material="" geometry="height: 4; width: 4" rotation=""></a-image>
-      <a-image link="href: 1-index.html" src="#proximo" position="-82.38007 -16.68 31.013" scale="5.57013 3.46433 0.0001" geometry="height: 5; width: 6" rotation="0 90 0" animation__scale="property: scale; to: 6.57013 3.46433 0.0001; dur: 200; startEvents: mouseenter" animation__scale_reverse="property: scale; to: 5.57013 3.46433 0.00001; dur: 200; startEvents: mouseleave" material=""></a-image>
+      <a-image link="href: index.html" src="#proximo" position="-82.38007 -16.68 31.013" scale="5.57013 3.46433 0.0001" geometry="height: 5; width: 6" rotation="0 90 0" animation__scale="property: scale; to: 6.57013 3.46433 0.0001; dur: 200; startEvents: mouseenter" animation__scale_reverse="property: scale; to: 5.57013 3.46433 0.00001; dur: 200; startEvents: mouseleave" material=""></a-image>
       <a-image link="href: 3-introducao.html" src="#proximo" position="-82.38007 -16.68 -9.96876" scale="5.57013 3.46433 0.0001" geometry="height: 5; width: 6" rotation="0 -90 0" animation__scale="property: scale; to: 6.57013 3.46433 0.0001; dur: 200; startEvents: mouseenter" animation__scale_reverse="property: scale; to: 5.57013 3.46433 0.00001; dur: 200; startEvents: mouseleave" material=""></a-image>
     
     
