--- a/4-atualidades.html
+++ b/4-atualidades.html
@@ -19,7 +19,7 @@
         <a-image link="href: 5-what-webxr.html" src="#proximo" position="-82.38007 -16.68 -9.96876" scale="5.57013 3.46433 0.0001" geometry="height: 5; width: 6" rotation="0 -90 0" animation__scale="property: scale; to: 6.57013 3.46433 0.0001; dur: 200; startEvents: mouseenter" animation__scale_reverse="property: scale; to: 5.57013 3.46433 0.00001; dur: 200; startEvents: mouseleave" material=""></a-image>
     
         <a-entity animation-mixer="" scale="0.02 0.02 0.02" position="2.93128 -1 -4" fbx-model="src: /assets/3d/mark-run/source/Running.fbx" rotation="0 -45 0"></a-entity>
-        <a-entity animation-mixer="" scale="0.05 0.05 0.05" position="0.89478 8.16782 -70.08" fbx-model="src: /assets/3d/facebook-logo/source/facebook Logo.fbx" rotation=""></a-entity>
+        <a-entity animation-mixer="" scale="0.05 0.05 0.05" position="0.89478 8.16782 -70.08" fbx-model="src: /assets/3d/facebook-logo/source/face-logo.fbx" rotation=""></a-entity>
         <a-sky src="#entrada" rotation="0 -90 0"></a-sky>
         <a-text value="Atualidades" position="-2.89674 1.99167 -2.43452" color="#000" scale="1 1 2" text="width: 6.99; height: 6; lineHeight: 1.81" rotation="3.8 29.999999999999996 0.28"></a-text>
         <a-image link="href: 2_bibliografia.html" src="#logotdc" position="-3.36634 3.1187 -4.71107" scale="0.2 0.2 0.0001" material="" geometry="height: 4; width: 4" rotation="0 29.999999999999996 0"></a-image>      
